# soft-renderer

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  run.sh  setup.sh  soft_renderer.kdev4
src/: .main.cpp.swp  .model.cpp.swp  .model.hpp.swp  .old.cpp.swp  .old.hpp.swp  .render.cpp.swp  .render.hpp.swp  .tgaimage.cpp.swp  .tgaimage.hpp.swp  Main.cpp  Model.cpp  Model.hpp  Render.cpp  Render.hpp  TGAImage.hpp  Util.hpp  main.cpp  model.cpp  model.hpp  old.cpp  old.hpp  render.cpp  render.hpp  tgaimage.cpp  tgaimage.hpp
v1/: CMakeLists.txt
v1/src/: Main.cpp  Model.cpp  Render.cpp  Render.hpp  TGAImage.cpp  Util.cpp
v2/: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  xmake.lua
v2/source/: CMakeLists.txt  Color.hpp  Macros.hpp  Margin.hpp  Math.hpp  PodVector.hpp  Rect.hpp  ScopeGuard.hpp  Size.hpp  all_fwd.hpp  main.cpp
v2/source/Renderer/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Primitive.cpp  Primitive.hpp  Rasterizer.cpp  Rasterizer.hpp  Scene.cpp  Scene.hpp  fwd.hpp
v2/source/Viewer/: App.cpp  App.hpp  CMakeLists.txt  Notification.cpp  Notification.hpp  Utils.cpp  Utils.hpp  fwd.hpp
vjava/: .gitignore  README.md
vjava/src/demo/softrenderer/: Bitmap.java  DepthBuffer.java  Main.java  Rasterizer.java
vrust/: .gitignore  Cargo.toml
